Module_14/analytics-worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-worker
  template:
    metadata:
      labels:
        app: analytics-worker
    spec:
      containers:
        - name: analytics-worker
          image: analytics-worker:latest
          imagePullPolicy: IfNotPresent
          command: ["python", "analytics_worker.py"]
