Module_14/celery-worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: celery-worker:latest
          imagePullPolicy: IfNotPresent
          command: ["celery"]
          args: ["-A", "celery_app", "worker", "--loglevel=info"]
