Module_14/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: my-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-api
                port:
                  number: 8000
